--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,3 @@
 {
-  "presets": ["react", "es2015"],
-  "env": {
-    "production": {
-      "plugins": [
-        "transform-react-remove-prop-types",
-        "transform-react-constant-elements",
-        "transform-react-inline-elements"
-      ]
-    }
-  }
+  "presets": ["es2015", "react"]
 }
