--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "axios": "^0.12.0",
     "babel": "^6.5.2",
-    "babel-core": "^6.9.0",
+    "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
@@ -38,24 +38,8 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1",
-    "webpack": "^1.13.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "morgan": "^1.7.0",
-    "node-sass": "^3.7.0",
-    "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0"
-  },
-  "engines": {
-    "node": "4.2.4"
+    "socket.io": "^1.4.6",
+    "socket.io-client": "^1.4.6",
+    "webpack": "^2.1.0-beta.8"
   }
 }
