--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "react-router": "^2.4.1",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.6",
-    "webpack": "^2.1.0-beta.8"
+    "webpack": "^1.13.1"
+  },
+  "engines": {
+    "node": "4.1.1"
   }
 }
